beatlesguessr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beatlesguessr
  namespace: beatlesguessr
spec:
  selector:
    app: beatlesguessr
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
